--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "react-dom": "^15.0.1",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0"
   }
